Corrigida proporção da tabela que contem o formulario de cadastro no arquivo css add-customer-style

--- a/src/main/webapp/resources/css/add-customer-style.css
+++ b/src/main/webapp/resources/css/add-customer-style.css
@@ -30,7 +30,8 @@ input {
 
 table {   
 	border-style:none;
-	width:50%;
+	width:10%;
+	font-family: Tahoma,Verdana,Segoe,sans-serif;
 }
 
 tr:nth-child(even) {background: #FFFFFF}
